~ minor fix in CSS, layouts

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,15 @@
-body {
-    box-sizing: border-box;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    height: 100%;
-    min-height: 100%;
+body,
+html {
+  box-sizing: border-box;
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+  height: 100%;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -30,11 +36,6 @@ header {
     margin-bottom: 10%;
 }
 
-.header_content img {
-    height: 67px;
-    width: 460px;
-}
-
 .header_content h1 {
     font-family: 'Roboto', sans-serif;
     color: white;
@@ -47,14 +48,14 @@ header {
     max-width: 59%;
     margin: 0 auto;
 
-    height: 230px;
+    height: 204px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
 .edudescr h1 {
-    max-width: 658px;
+    max-width: 590px;
 
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -72,26 +73,28 @@ header {
     height-min: 160px;
     background-color: #EBF3FF;
     margin: 0 auto;
-    padding: 60px 40px 40px 40px;
+    padding: 50px 40px 34px 40px;
 }
 
 .row {
     --bs-gutter-x: 0;
 }
 
+.edu {
+  flex: 1 1 auto;
+}
+
 
 footer {
     background-image: url("/img/footer.png");
     height: 145px;
-    margin-top: 7%;
+    margin-top: 4%;
 
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
 
-    position: fixed;
-    bottom: 0;
     background-size: cover;
     width: 100%;
 
@@ -149,7 +152,7 @@ footer {
     align-self: flex-start;
     margin-top: 3%;
     text-decoration: underline;
-    text-decoration-color: white;
+//    text-decoration-color: white;
 }
 
 .lang a{color: white;
@@ -186,12 +189,6 @@ input.form-control {
     }
 }
 
-
-@media (max-height:1030px){
-    footer{
-        position: static;
-    }
-}
 
 
 @media (max-width:1110px){
