--- a/app/views/uk/index.erb
+++ b/app/views/uk/index.erb
@@ -75,8 +75,20 @@
 <script id="ok" type="x-tmpl-mustache">
   <div class="row mt-2">
   <ul>
-    <li>Реєстрація на цю програму можлива з корпоративних email в домені ХХХХХХХХ@xxx.{{domain}}</li>
-    <li>Реєстрaція на цю програму можлива за запрошенням адміністратора вашого закладу.</li>
+    <li>Реєстрація на цю програму можлива з корпоративних email в домені
+      <ul class='inline-ul'>
+        {{#domain}}
+         <li>ХХХХХХХХ@xxx.{{.}}</li>
+        {{/domain}}
+      </ul>
+    </li>
+    <li>Реєстрація на цю програму можлива за запрошенням адміністратора вашого закладу. Зверніться до
+      <ul class='inline-ul'>
+        {{#admin}}
+         <li>{{.}}</li>
+        {{/admin}}
+      </ul>
+    </li>
   </ul>
   </div>
   <div class="row mt-2">
@@ -87,10 +99,16 @@
 </script>
 
 
-<script id="no-admin" type="x-tmpl-mustache">
+<script id="domain-only" type="x-tmpl-mustache">
   <div class="row mt-2">
   <ul>
-    <li>Реєстрація на цю програму можлива з корпоративних email в домені ХХХХХХХХ@xxx.{{domain}}</li>
+    <li>Реєстрація на цю програму можлива з корпоративних email в домені
+      <ul class='inline-ul'>
+        {{#domain}}
+          <li>ХХХХХХХХ@xxx.{{.}}</li>
+        {{/domain}}
+      </ul>
+    </li>
   </ul>
   </div>
   <div class="row mt-2">
@@ -100,7 +118,25 @@
   </div>
 </script>
 
-<script id="no-domain" type="x-tmpl-mustache">
+<script id="admin-only" type="x-tmpl-mustache">
+  <div class="row mt-2">
+    <li>Реєстрaція на цю програму можлива за запрошенням адміністратора вашого закладу. Зверніться до
+      <ul class='inline-ul'>
+        {{#admin}}
+         <li>{{.}}</li>
+        {{/admin}}
+      </ul>
+    </li>
+  </ul>
+  </div>
+  <div class="row mt-2">
+    <div class="col-sm-12 text-center">
+     <a class="btn btn-primary" href='{{URL}}'>Перейти</a>
+    </div>
+  </div>
+</script>
+
+<script id="no-all" type="x-tmpl-mustache">
   <div class="row mt-2">
      <p color='red'>До цієї програми ще не призначено адміністратора, зверніться до адміністрації вашого закладу.</p>
      <p> Заклад освіти має визначити відповідальну особу та подати відповідний запит до Міністерства освіти і науки України.</p>
@@ -112,9 +148,6 @@
     </div>
   </div>
 </script>
-
-
-
 
 <script>
     let data =<%= MultiJson.dump(@units) %>;
@@ -141,6 +174,29 @@
         return null;
     }
 
+    function render(template, data) {
+        let obj = document.getElementById(template).innerHTML;
+        return  Mustache.render(obj, data);
+    }
+
+    function process(value){
+        let has_url = value.URL && value.URL.indexOf("http") !== -1;
+        let has_admin = value.admin.length > 0;
+        let has_domain = value.domain.length > 0;
+        let variant = 'ok';
+        if (!has_url) {
+            //There is UNI but no URL
+            variant = 'new-program'
+        } else {
+            if (has_admin) {
+                variant = has_domain ? 'ok' : 'admin-only'
+            } else {
+                variant = has_domain ? 'domain-only' : 'no-all'
+            }
+        }
+        return render(variant, value);
+    }
+
     $(document).ready(function () {
         $('#select').select2({
             data: select,
@@ -150,26 +206,22 @@
             tags: true
         }).on('select2:select', function (e) {
             let value = e.params.data;
-            let variant;
-            console.log(value)
-            let has_url = value.URL && value.URL.indexOf("http") !== -1;
-            let has_admin = value.admin;
-            let has_domain = !!value.domain;
-
+            let result = document.getElementById('result');
+            console.log(value);
             if (value.id  === value.text) {
-                //There is no University
-                variant = 'new-university';
-            }  else if (!has_url) {
-                //There is UNI but no URL
-                variant = 'new-program'
-            }
-            else if (has_admin && has_domain) {
-                variant = 'ok';
-            } else if (!has_admin) {
-                variant = has_domain ? 'no-admin' : 'no-domain';
-            }
-            let template = document.getElementById(variant).innerHTML;
-            document.getElementById('result').innerHTML = Mustache.render(template, value);
-        });
-    });
+               result.innerHTML  = render('new-university', value);
+            } else {
+                result.innerHTML = 'Хвилинку...';
+                $.ajax({
+                    type: "get",
+                    url: '/uk/' + value.id,
+                    dataType: "json",
+                    encode: true
+                }).done(function (msg) {
+                    $('#result').html(process(msg));
+                }).fail(function (jqXHR, textStatus) {
+                    $('#result').html(textStatus);
+                });
+            };
+    })});
 </script>
