--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,6 +189,23 @@ input.form-control {
     }
 }
 
+.inline-ul {
+    display: inline;
+    list-style: none;
+    padding-left: 0;
+}
+
+.inline-ul li {
+    display: inline;
+}
+
+.inline-ul li:after {
+    content: ", ";
+}
+
+.inline-ul li:last-child:after {
+    content: "";
+}
 
 
 @media (max-width:1110px){
