--- a/app/views/rector.erb
+++ b/app/views/rector.erb
@@ -1,11 +1,8 @@
 <div class="edusearch">
   <div class="edudescr">
     <h1 class="edudescr_title">
-      Задля пришвидшення адаптації ЗВО до сучасних реалій освіти в умовах війни ми прагнемо підключити міжнародних партнерів для надання освітніх матеріалів для студентів з усієї України.
-      <br/>
-      Для цього нам вкрай потрібні контакти відповідального за впровадження онлайн-навчання в Вашому університеті. В подальшому ми будемо контактувати з цією особою з наступними питаннями та завданнями.
-      <br/>
-      Все буде Україна! Дякуємо!
+      Ми залучаємо міжнародних партнерів-провайдерів навчальних ресурсів, щоб забезпечити заклади освіти безкоштовним доступом до найкращих онлайн курсів провідних університетів світу, дати можливість закладам продовжувати вдосконалювати навчання, застосовуючи сучасні сервіси.<br/>
+      Просимо надати контактні дані особи у вашому закладі, що відповідатиме за впровадження таких ресурсів, співробітника, який зможе виконувати роль адміністратора та координатора.
     </h1>
   </div>
 
@@ -54,7 +51,7 @@
     <input type="hidden" class="form-control" name="id" value="{{id}}">
     <input type="hidden" class="form-control" name="type" value="bailee">
   <div class="row mt-2">
-  <label class="col-sm-2 col-form-label">Email автора заявки</label>
+  <label class="col-sm-2 col-form-label">Ваш email</label>
   <div class="col-sm-10">
     <input type="email" class="form-control" value="" name="email" required>
   </div>
@@ -66,26 +63,31 @@
   </div>
   </div>
   <div class="row mt-2">
-  <label class="col-sm-2 col-form-label">ПІБ адміністратора</label>
+    <p>
+    Адміністратор (особа, відповідальна за впровадження онлайн-освіти у Вашому закладі):
+    </p>
+  </div>
+  <div class="row mt-2">
+  <label class="col-sm-2 col-form-label">ПІБ</label>
   <div class="col-sm-10">
     <input type="text" class="form-control" value="" name="name" required>
   </div>
   </div>
   <div class="row mt-2">
-  <label class="col-sm-2 col-form-label">email адміністратора</label>
+  <label class="col-sm-2 col-form-label">email</label>
   <div class="col-sm-10">
     <input type="email" class="form-control" value="" name="bailee" required>
   </div>
   </div>
   <div class="row mt-2">
-  <label class="col-sm-2 col-form-label">моб.тел. адміністратора</label>
+  <label class="col-sm-2 col-form-label">мобільний телефон</label>
   <div class="col-sm-10">
     <input type="tel" class="form-control" value="" name="bailee_tel" required>
   </div>
   </div>
   <div class="row mt-2">
   <div class="col-sm-12 text-center">
-    <button type="submit" class="btn btn-primary">Надіслати запит</button>
+    <button type="submit" class="btn btn-primary">Надіслати дані</button>
   </div>
   </div>
   </form>
