--- a/app/views/rector_layout.erb
+++ b/app/views/rector_layout.erb
@@ -5,8 +5,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Mooc for Ukraine</title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
-  <link rel="stylesheet" href="<%= f '/css/style.css'%>">
-  <link rel="alternate" hreflang="en" href="https://<%= settings.url%>?lang=en" />
+  <link rel="stylesheet" href="<%= f '/css/styler.css'%>">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +26,7 @@
       <div class="header_inner">
         <div class="header_content">
           <img src="/img/logo.svg" style="max-height: 70px">
-          <h1 style="line-height: 100%;">Шановні керівники закладів фахової передвищої та вищої освіти! </h1>
+          <h1 style="line-height: 100%;">Шановні керівники закладів фахової передвищої та вищої освіти!</h1>
         </div>
         <img src="/img/header_img.png">
       </div>
