--- a/app/views/uk/index.erb
+++ b/app/views/uk/index.erb
@@ -33,7 +33,12 @@
          <label for="f-url" class="form-label">
              Спробуйте знайти <a href="https://registry.edbo.gov.ua" target="blank" style="text-decoration: underline;">тут</a>
          </label>
-         <input type="url" class="form-control" id="f-url"  name="url" placeholder="https://registry.edbo.gov.ua/university/ххххх/" required>
+         <input type="url" class="form-control" id="f-url"  name="url"
+            placeholder="https://registry.edbo.gov.ua/university/ххххх"
+            value="https://registry.edbo.gov.ua/university/код-університету"
+            pattern="https://registry.edbo.gov.ua/university/(\d+)"
+            title="URL має бути виду https://registry.edbo.gov.ua/university/код-університету"
+            required>
        </div>
        <div class="mb-3">
          <label for="f-email" class="form-label">E-mail</label>
