--- a/app/views/rector_layout.erb
+++ b/app/views/rector_layout.erb
@@ -25,8 +25,8 @@
     <header>
       <div class="header_inner">
         <div class="header_content">
-          <img src="/img/logo.svg" style="max-height: 70px">
-          <h1 style="line-height: 100%;">Шановні керівники закладів фахової передвищої та вищої освіти!</h1>
+          <img src="/img/<%= @logo %>" style="max-height: 70px">
+          <h1 style="line-height: 100%;"><%= @title %></h1>
         </div>
         <img src="/img/header_img.png">
       </div>
