day-by-day updates

--- a/app/views/rector.erb
+++ b/app/views/rector.erb
@@ -126,7 +126,7 @@
     $(document).ready(function () {
         $('#select').select2({
             data: select,
-            placeholder: 'Оберіть Ваш навчальний заклад',
+            placeholder: 'Оберіть Ваш заклад освіти',
             allowClear: true,
             matcher: matchCustom,
             tags: true
