--- a/app/views/uk/index.erb
+++ b/app/views/uk/index.erb
@@ -1,7 +1,7 @@
 <div class="edusearch">
   <div class="edudescr">
     <h1 class="edudescr_title">
-      У полі нижче оберіть свій вищий навчальний заклад, щоб дізнатися посилання для доступу до безкоштовної програми з
+      У полі нижче оберіть свій вищий заклад освіти, щоб дізнатися посилання для доступу до безкоштовної програми з
       більш ніж 6000 курсів від провідних університетів і партнерів Coursera!
     </h1>
   </div>
@@ -205,7 +205,7 @@
     $(document).ready(function () {
         $('#select').select2({
             data: select,
-            placeholder: 'Оберіть Ваш навчальний заклад',
+            placeholder: 'Оберіть Ваш заклад освіти',
             allowClear: true,
             matcher: matchCustom,
             tags: true
