--- a/public/css/styler.css
+++ b/public/css/styler.css
@@ -49,11 +49,11 @@ header {
     max-width: 59%;
     margin: 0 auto;
 
-    height: 300px;
+    min-height: 144px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-}
+    min-height: 144px;}
 
 .edudescr h1 {
     max-width: 540px;
@@ -185,7 +185,7 @@ input.form-control {
     .edudescr {
         
         margin-left: 21%;
-        height:420px;
+        padding: 9% 0;
     }
   
 }
@@ -220,8 +220,8 @@ input.form-control {
 
 @media screen and (min-width:320px) and (max-width:470px){
    header{
-     height: 410px;
-     margin-bottom:30%;
+
+     margin-bottom:35%;
    }
    
    .header_inner img{
@@ -231,7 +231,7 @@ input.form-control {
    
   .header_content{
      margin-top: 10%;
-     margin-bottom: 50px;
+     margin-bottom: 75px;
    }
   .header_content h1{
      width: 270px;
@@ -247,7 +247,8 @@ input.form-control {
     
    }
 .edudescr{
-  height:410px;
+  min-height: 144px;
+  margin-bottom: 35px;}
 }
   
 
@@ -284,12 +285,12 @@ input.form-control {
 
   
   .edudescr{
-  height:410px;
+
 }
 
    header{
        height: 410px;
-       margin-bottom: 23%;
+       margin-bottom: 29%;
     }
  
 
