--- a/app/views/en/main.erb
+++ b/app/views/en/main.erb
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Coursera for Ukraine</title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
-  <link rel="alternate" hreflang="uk" href="https://<%= settings.url%>?lang=uk" />
+  <link rel="alternate" hreflang="uk" href="<%= settings.url%>?/lang=uk" />
   <link rel="stylesheet" href="<%= f '/css/style.css'%>">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
