--- a/app/views/uk/main.erb
+++ b/app/views/uk/main.erb
@@ -6,7 +6,7 @@
   <title>Coursera for Ukraine</title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
   <link rel="stylesheet" href="<%= f '/css/style.css'%>">
-  <link rel="alternate" hreflang="en" href="https://<%= settings.url%>?lang=en" />
+  <link rel="alternate" hreflang="en" href="<%= settings.url%>?lang=en" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
