--- a/app/views/en/main.erb
+++ b/app/views/en/main.erb
@@ -5,8 +5,8 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Coursera for Ukraine</title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
-  <link rel="alternate" hreflang="uk" href="<%= settings.url%>?/lang=uk" />
-  <link rel="stylesheet" href="<%= f '/css/style.css'%>">
+  <link rel="alternate" hreflang="uk" href="?lang=uk" />
+  <link rel="stylesheet" href="<%= f '/s/css/style.css'%>">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js" crossorigin="anonymous"></script>
-  <script src="<%= f '/js/mustache.min.js'%>" crossorigin="anonymous"></script>
+  <script src="<%= f '/s/js/mustache.min.js'%>" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,11 +25,11 @@
 <header>
   <div class="header_inner">
     <div class="header_content">
-      <img src="/img/coursera.svg">
+      <img src="/s/img/coursera.svg">
       <h1>Choice of response institution in Ukraine</h1>
     </div>
-    <img src="/img/header_img.png">
-    <div class="lang" ><a href="/?lang=uk">UA</a></div>
+    <img src="/s/img/header_img.png">
+    <div class="lang" ><a href="?lang=uk">UA</a></div>
   </div>
 </header>
 
