--- a/app/views/rector.erb
+++ b/app/views/rector.erb
@@ -26,7 +26,7 @@
     <p>
       Ви не можете знайти свій заклад?  Тоді заповніть форму нижче.
     </p>
-    <form action='/add' method="POST" >
+    <form action='/s/add' method="POST" >
        <input type="hidden" name="UA" value="{{text}}">
        <div class="mb-3">
          <label for="f-url" class="form-label">
@@ -47,7 +47,7 @@
 </script>
 
 <script id="new-form" type="x-tmpl-mustache">
-  <form action="/add" method="POST" >
+  <form action="/s/add" method="POST" >
     <input type="hidden" class="form-control" name="id" value="{{id}}">
     <input type="hidden" class="form-control" name="type" value="bailee">
   <div class="row mt-2">
