--- a/app/views/rector_layout.erb
+++ b/app/views/rector_layout.erb
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Mooc for Ukraine</title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
-  <link rel="stylesheet" href="<%= f '/css/styler.css'%>">
+  <link rel="stylesheet" href="<%= f '/s/css/styler.css'%>">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js" crossorigin="anonymous"></script>
-  <script src="<%= f '/js/mustache.min.js'%>" crossorigin="anonymous"></script>
+  <script src="<%= f '/s/js/mustache.min.js'%>" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,10 +25,10 @@
     <header>
       <div class="header_inner">
         <div class="header_content">
-          <img src="/img/<%= @logo %>" style="max-height: 70px">
+          <img src="/s/img/<%= @logo %>" style="max-height: 70px">
           <h1 style="line-height: 100%;"><%= @title %></h1>
         </div>
-        <img src="/img/header_img.png">
+        <img src="/s/img/header_img.png">
       </div>
     </header>
 
@@ -49,5 +49,4 @@
 <%= rollbar_snippet %>
 </body>
 </html>
-
 
