--- a/app/views/uk/404.erb
+++ b/app/views/uk/404.erb
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center justify-content-center" style="height: 20rem;">
   <div class="row">
     <div class="col">
-      <img src="/img/404.svg" height="200px">
+      <img src="/s/img/404.svg" height="200px">
     </div>
     <div class="col">
       <h1>404</h1>
