--- a/public/s/css/style.css
+++ b/public/s/css/style.css
@@ -39,24 +39,23 @@ header {
 .header_content h1 {
     font-family: 'Roboto', sans-serif;
     color: white;
-    font-size: 35px;
+    font-size: 48px;
     line-height: 130%;
-    margin-top: 15%;
-  
+    margin-top: 40px;
 }
 
 .edudescr {
     max-width: 59%;
     margin: 0 auto;
 
-    min-height: 144px;
+    height: 204px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    min-height: 144px;}
+}
 
 .edudescr h1 {
-    max-width: 540px;
+    max-width: 590px;
 
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -87,7 +86,7 @@ header {
 
 
 footer {
-    background-image: url("/img/footer.png");
+    background-image: url("/s/img/footer.png");
     height: 145px;
     margin-top: 4%;
 
@@ -175,7 +174,9 @@ input.form-control {
 
 @media (max-width: 1695px) {
 
-    
+    .header_content h1 {
+        font-size: 35px;
+    }
 
     .header_inner img {
         height: 70%;
@@ -183,11 +184,9 @@ input.form-control {
     }
 
     .edudescr {
-        
+        max-width: 300px;
         margin-left: 21%;
-        padding: 9% 0;
     }
-  
 }
 
 
@@ -199,7 +198,7 @@ input.form-control {
 }
 
 
-@media (max-width:600px){
+@media (max-width:1024px){
   .header_inner{
      display: flex;
      flex-direction: column;
@@ -214,14 +213,14 @@ input.form-control {
 
 @media screen and (min-width:660px) and (max-width:769px){
    .header_content h1{
-      font-size: 24px;
+      font-size: 20px;
    } 
 }
 
 @media screen and (min-width:320px) and (max-width:470px){
    header{
-
-     margin-bottom:35%;
+     height: 410px;
+     margin-bottom: 25%;
    }
    
    .header_inner img{
@@ -231,26 +230,18 @@ input.form-control {
    
   .header_content{
      margin-top: 10%;
-     margin-bottom: 75px;
+     margin-bottom: 20px;
    }
   .header_content h1{
      width: 270px;
      margin-top: 8%;
-     font-size: 33px
    }
 
   .edudescr_title{
      width: 310px;
      font-size: 14px;
      margin: 0 auto;
-    
-    
    }
-.edudescr{
-  min-height: 144px;
-  margin-bottom: 35px;}
-}
-  
 
   footer{
      justify-content: center;
@@ -263,50 +254,31 @@ input.form-control {
      }
 }
 
-@media screen and (min-width:471px) and (max-width:599px){
+@media screen and (min-width:470px) and (max-width:600px){
     .header_content{
-       width:390px;
+       margin-bottom: 0;
        font-size: 25px;
        margin-top: 10%;
     }
 
     .header_content h1{
       margin-top: 30px;
-     
     }
-
- 
    .header_inner img{
        height: 90%;
        width: 90%;
-     
     }
-
-
-  
-  .edudescr{
-
-}
 
    header{
        height: 410px;
-       margin-bottom: 29%;
+       margin-bottom: 28%;
     }
- 
-
-  
 }
 
-@media screen and (min-width:600px) and (max-width:660px){
-  .header_content{
-      margin-top:4%;
-  }
-  
-  .header_content h1{
+@media screen and (min-width:601px) and (max-width:660px){
+   .header_content h1{
       font-size: 20px;
-     
     }
-  
 }
 
 @media screen and (min-width:320px) and (max-width:600px){
@@ -318,45 +290,46 @@ input.form-control {
      max-width: 306px;
      margin: 0 auto;
   }
+  .header_inner img:nth-child(1){
+    max-height:47px;
+  }
 }
 
-@media screen and (min-width:768px) and (max-width:1441px){
-
-.header_content h1 {
-    
-    font-size: 30px;
-  
-}
-  
-}
-
-@media screen and (min-width:600px) and (max-width:1024px){
-  .header_inner img:last-child{
+@media screen and (min-width:601px) and (max-width:1024px){
+  .header_inner img:nth-child(2){
     display:none
   }
 
+  
   .header_inner{
       height:350px;
-      max-width:390px;
+      max-width: 390px;
   }
 
   .header_inner img {
-     height: 100%;
+     height: 100px;
      width: 100%;
-    
   }
 .header_content{
-  width:390px;
-  margin:0 auto;
-  margin-bottom:30px
+  margin-bottom:20%;
 }
 .header_content h1{
   font-size:30px;
 }
+.lang{
+     width: 120%;
+     justify-content: flex-end;
+  }
 }
 
-@media screen and (width:600px){
- .header_content{
-   margin-top:51px
-  }
+.inline-ul {
+    list-style: circle;
+}
+
+.inline-ul li:after {
+    content: ", ";
+}
+
+.inline-ul li:last-child:after {
+    content: "";
 }
