--- a/public/s/css/styler.css
+++ b/public/s/css/styler.css
@@ -39,23 +39,24 @@ header {
 .header_content h1 {
     font-family: 'Roboto', sans-serif;
     color: white;
-    font-size: 48px;
+    font-size: 35px;
     line-height: 130%;
-    margin-top: 40px;
+    margin-top: 15%;
+  
 }
 
 .edudescr {
     max-width: 59%;
     margin: 0 auto;
 
-    height: 204px;
+    min-height: 144px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-}
+    min-height: 144px;}
 
 .edudescr h1 {
-    max-width: 590px;
+    max-width: 540px;
 
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -86,7 +87,7 @@ header {
 
 
 footer {
-    background-image: url("/img/footer.png");
+    background-image: url("/s/img/footer.png");
     height: 145px;
     margin-top: 4%;
 
@@ -174,9 +175,7 @@ input.form-control {
 
 @media (max-width: 1695px) {
 
-    .header_content h1 {
-        font-size: 35px;
-    }
+    
 
     .header_inner img {
         height: 70%;
@@ -184,9 +183,11 @@ input.form-control {
     }
 
     .edudescr {
-        max-width: 300px;
+        
         margin-left: 21%;
+        padding: 9% 0;
     }
+  
 }
 
 
@@ -198,7 +199,7 @@ input.form-control {
 }
 
 
-@media (max-width:1024px){
+@media (max-width:600px){
   .header_inner{
      display: flex;
      flex-direction: column;
@@ -213,14 +214,14 @@ input.form-control {
 
 @media screen and (min-width:660px) and (max-width:769px){
    .header_content h1{
-      font-size: 20px;
+      font-size: 24px;
    } 
 }
 
 @media screen and (min-width:320px) and (max-width:470px){
    header{
-     height: 410px;
-     margin-bottom: 25%;
+
+     margin-bottom:35%;
    }
    
    .header_inner img{
@@ -230,18 +231,26 @@ input.form-control {
    
   .header_content{
      margin-top: 10%;
-     margin-bottom: 20px;
+     margin-bottom: 75px;
    }
   .header_content h1{
      width: 270px;
      margin-top: 8%;
+     font-size: 33px
    }
 
   .edudescr_title{
      width: 310px;
      font-size: 14px;
      margin: 0 auto;
+    
+    
    }
+.edudescr{
+  min-height: 144px;
+  margin-bottom: 35px;}
+}
+  
 
   footer{
      justify-content: center;
@@ -254,31 +263,50 @@ input.form-control {
      }
 }
 
-@media screen and (min-width:470px) and (max-width:600px){
+@media screen and (min-width:471px) and (max-width:599px){
     .header_content{
-       margin-bottom: 0;
+       width:390px;
        font-size: 25px;
        margin-top: 10%;
     }
 
     .header_content h1{
       margin-top: 30px;
+     
     }
+
+ 
    .header_inner img{
        height: 90%;
        width: 90%;
+     
     }
+
+
+  
+  .edudescr{
+
+}
 
    header{
        height: 410px;
-       margin-bottom: 28%;
+       margin-bottom: 29%;
     }
+ 
+
+  
 }
 
-@media screen and (min-width:601px) and (max-width:660px){
-   .header_content h1{
+@media screen and (min-width:600px) and (max-width:660px){
+  .header_content{
+      margin-top:4%;
+  }
+  
+  .header_content h1{
       font-size: 20px;
+     
     }
+  
 }
 
 @media screen and (min-width:320px) and (max-width:600px){
@@ -290,46 +318,45 @@ input.form-control {
      max-width: 306px;
      margin: 0 auto;
   }
-  .header_inner img:nth-child(1){
-    max-height:47px;
-  }
 }
 
-@media screen and (min-width:601px) and (max-width:1024px){
-  .header_inner img:nth-child(2){
+@media screen and (min-width:768px) and (max-width:1441px){
+
+.header_content h1 {
+    
+    font-size: 30px;
+  
+}
+  
+}
+
+@media screen and (min-width:600px) and (max-width:1024px){
+  .header_inner img:last-child{
     display:none
   }
 
-  
   .header_inner{
       height:350px;
-      max-width: 390px;
+      max-width:390px;
   }
 
   .header_inner img {
-     height: 100px;
+     height: 100%;
      width: 100%;
+    
   }
 .header_content{
-  margin-bottom:20%;
+  width:390px;
+  margin:0 auto;
+  margin-bottom:30px
 }
 .header_content h1{
   font-size:30px;
 }
-.lang{
-     width: 120%;
-     justify-content: flex-end;
+}
+
+@media screen and (width:600px){
+ .header_content{
+   margin-top:51px
   }
-}
-
-.inline-ul {
-    list-style: circle;
-}
-
-.inline-ul li:after {
-    content: ", ";
-}
-
-.inline-ul li:last-child:after {
-    content: "";
 }
