add udemy pages, modify data caching

--- a/app/views/en/coursera.erb
+++ b/app/views/en/coursera.erb
@@ -219,7 +219,7 @@
                 result.innerHTML = 'Loading...';
                 $.ajax({
                     type: "get",
-                    url: '/s/en/' + value.id,
+                    url: '/s/coursera/' + value.id,
                     dataType: "json",
                     encode: true
                 }).done(function (msg) {
