--- a/app/views/en/main.erb
+++ b/app/views/en/main.erb
@@ -25,7 +25,7 @@
 <header>
   <div class="header_inner">
     <div class="header_content">
-      <img src="/s/img/coursera.svg">
+      <img src="/s/img/<%= @logo_img %>" style="max-width:460px; max-height:125px">
       <h1>Choice of response institution in Ukraine</h1>
     </div>
     <img src="/s/img/header_img.png">
