Add new form for requesting zoom license

--- a/app/views/rector_layout.erb
+++ b/app/views/rector_layout.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <title>Mooc for Ukraine</title>
+  <title><%= h(@page_title || @title || 'Mooc for Ukraine') %></title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
   <link rel="stylesheet" href="<%= f '/s/css/styler.css'%>">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
