--- a/app/views/uk/main.erb
+++ b/app/views/uk/main.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <title>Coursera for Ukraine</title>
+  <title><%= h(@page_title || @title || 'Mooc for Ukraine') %></title>
   <meta name="author" content="Sumy State University, ОМЦТЕН">
   <link rel="stylesheet" href="<%= f '/s/css/style.css'%>">
   <link rel="alternate" hreflang="en" href="?lang=en" />
