--- a/app/views/en/udemy.erb
+++ b/app/views/en/udemy.erb
@@ -112,7 +112,7 @@
     }
 
     function process(value){
-        let has_admin = value.admin.length > 0;
+        let has_admin = value.admin;
         let variant = has_admin ?  'ok' : 'no-all';
         return render(variant, value);
     }
