--- a/app/views/uk/main.erb
+++ b/app/views/uk/main.erb
@@ -25,8 +25,8 @@
 <header>
   <div class="header_inner">
     <div class="header_content">
-      <img src="/s/img/<%= @logo_img %>" style="max-width:460px; max-height:125px">
-      <h1>Вибір інституції реагування в Україні</h1>
+      <img src="/s/img/<%= @logo_img %>" style="max-width:460px; max-height:125px; min-height: 75px">
+      <h1><%= @title || 'Вибір інституції реагування в Україні'%></h1>
     </div>
     <img src="/s/img/header_img.png">
     <div class="lang" ><a href="?lang=en">EN</a></div>
