--- a/app/views/en/main.erb
+++ b/app/views/en/main.erb
@@ -25,8 +25,8 @@
 <header>
   <div class="header_inner">
     <div class="header_content">
-      <img src="/s/img/<%= @logo_img %>" style="max-width:460px; max-height:125px">
-      <h1>Choice of response institution in Ukraine</h1>
+      <img src="/s/img/<%= @logo_img %>" style="max-width:460px; max-height:125px; min-height: 75px">
+      <h1><%= @title || 'Choice of response institution in Ukraine'%></h1>
     </div>
     <img src="/s/img/header_img.png">
     <div class="lang" ><a href="?lang=uk">UA</a></div>
